--- a/Solutions/Sheet 2/Sheet 2.tex
+++ b/Solutions/Sheet 2/Sheet 2.tex
@@ -20,7 +20,7 @@
 		$\mathrel{\vcenter{\hbox{\rule{2cm}{0.5pt}}}}$ \textbf{Sample 				Solution} $\mathrel{\vcenter{\hbox{\rule{2cm}{0.5pt}}}}$\\[1cm]
 	\end{center}
 \large
-	\section*{Task 1:}
+	\section*{Task 1: Operational Semantics & Derivation Trees}
 	\section*{Task 2: Operational Semantics of other Statements}
 		\indent\indent For $c\in Cmd,\; \sigma , \sigma ^{'}, \sigma ^{''} \in \Sigma$ and $b\in BExp$ the \textcolor{red}{repeat until relation}\\\indent $\left< \text{\textbf{repeat}}\; c\; \text{\textbf{until}}\; b,\; \sigma \right> \rightarrow \sigma ^{''}$ is defined by:\\
 		
@@ -77,4 +77,7 @@
 	\indent $c_1;c_2\mapsto \text{\textbf{dep}}\left( c_1\right) \cup\text{\textbf{dep}}\left( c_2\right)$\\
 	\indent $\text{\textbf{repeat}}\; c\; \text{\textbf{until}}\; b \mapsto \text{\textbf{dep}}\left( c\right) \cup \text{\textbf{FV}}\left( b\right)$
 
+	\subsection*{(c)}
+	
+	
 \end{document}
