--- a/Solutions/Sheet 1/Sheet 1.tex
+++ b/Solutions/Sheet 1/Sheet 1.tex
@@ -8,7 +8,14 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
+\usepackage{amsthm}
 \usepackage{color}
+\usepackage{tikz}
+\usepackage{xcolor}
+
+\usetikzlibrary{shapes,arrows}
+
+\newcommand{\FV}{\text{FV}}
 
 
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
@@ -24,6 +31,185 @@
 
 	\section*{Task 1: Recursion and Structural Induction}
 	
+	\subsection*{(a)}
+	
+	\begin{enumerate}
+		\item[] \begin{tabular}{rll}
+					$z\left[x:=a'\right]$ & $=z$ &\\
+					$y\left[x:=a'\right]$ & $=\left\{\begin{aligned}a', &\qquad \text{if}\; x=y\\ y, &\qquad \text{if}\; x\neq y\end{aligned}\right.$ & $y\in \text{Var}$\\
+					$\left(a_{1}\oplus a_{2}\right)\left[x:=a'\right]$ & $=a_{1}\left[x:=a'\right]\oplus a_{2}\left[x:=a'\right]$ & for $\oplus \in \left\{+,\; -,\; *\right\}$\\
+				\end{tabular}
+	\end{enumerate}
+	
+	\subsection*{(b)}
+	
+	\begin{enumerate}
+		\item[] $\text{occ}:\; \text{AExp\;x\;Var} \rightarrow \mathbb{N}$
+		\item[] \begin{tabular}{lll}
+					$\text{occ}\left(z,\; x\right)$ & $=0$ &\\
+					$\text{occ}\left(y,\; x\right)$ & $=\left\{\begin{aligned}1, &\qquad \text{if}\; x=y\\ 0, &\qquad \text{if}\; x\neq y\end{aligned}\right.$ & $y\in \text{Var}$\\
+					$\text{occ}\left(a_{1}\oplus a_{2},\; x\right)$ & $=\text{occ}\left(a_{1},\; x\right) + \text{occ}\left(a_{2},\; x\right)$ & for $\oplus \in \left\{+,\; -,\; *\right\}$\\
+				\end{tabular}
+	\end{enumerate}
+	
+	\subsection*{(c)}
+	
+	\begin{enumerate}
+		\item[] The statement $\FV\left(a\left[x:=a'\right]\right)\subseteq \left(\FV\left(a\right)\verb|\|\left\{x\right\}\right)\cup \FV\left(a'\right)$ will by shown by structural induction on the structure of arithmetic expressions a.
+		\item[] \underline{\textbf{Induction Base:}}
+		\begin{enumerate}
+			\item[] \underline{Case 1:}\quad $a=z,\; z\in\mathbb{Z}$
+			\begin{enumerate}
+				\item[] $\FV\left(z\left[x:=a'\right]\right) \overset{\left(a\right)}{=}\underbrace{\FV\left(z\right)}_{=\emptyset}=\FV\left(z\right)\verb|\|\left\{x\right\}\subseteq\left(\FV\left(z\right)\verb|\|\left\{x\right\}\right)\cup \FV\left(a'\right)$
+			\end{enumerate}
+			\item[] \underline{Case 2:}\quad $a=y,\; y\neq x\quad y\in \text{Var}$
+			\begin{enumerate}
+				\item[] $\FV\left(y\left[x:=a'\right]\right)\overset{\left(a\right)}{=}\underbrace{\FV\left(y\right)}_{=\left\{y\right\}}\subseteq\left(\FV\left(y\right)\verb|\|\left\{x\right\}\right)\cup \FV\left(a'\right)$
+			\end{enumerate}
+			\item[] \underline{Case 3:}\quad $a=x$
+			\begin{enumerate}
+				\item[] $\FV\left(x\left[x:=a'\right]\right)\overset{\left(a\right)}{=}\FV\left(a'\right)\subseteq\left(\FV\left(y\right)\verb|\|\left\{x\right\}\right)\cup \FV\left(a'\right)$
+			\end{enumerate}
+		\end{enumerate}
+		\newpage
+		\item[] \underline{\textbf{Induction Hypothesis:}}
+		\begin{enumerate}
+			\item[] Assume for all subexpressions $\bar{a}$ of $a$ that\\ $\FV\left(\bar{a}\left[x:=a'\right]\right)\subseteq\left(\FV\left(\bar{a}\right)\verb|\|\left\{x\right\}\right)\cup \FV\left(a'\right)$ holds.
+		\end{enumerate}
+		\item[] \underline{\textbf{Induction Step:}}
+		\begin{enumerate}
+			\item[] Let $\oplus\in \left\{+,\; -,\; *\right\}$ and $a_{1},\;a_{2}\in\text{AExp}$.			
+			\begin{enumerate}
+				\item[] $\FV\left(\left(a_{1}\oplus a_{2}\right)\left[x:=a'\right]\right)\overset{\left(a\right)}{=}\FV\left(a_{1}\left[x:=a_{1}\right]\oplus a_{2}\left[x:=a'\right]\right)$\\[6pt]
+				$\overset{\left(\text{Def}\; 2.4\right)}{=}\FV\left(a_{1}\left[x:=a'\right]\right)\cup\FV\left(a_{2}\left[x:=a'\right]\right)$\\[6pt]
+				$\overset{\text{\textbf{I.H.}}}{\subseteq}\left(\FV\left(a_{1}\right)\verb|\|\left\{x\right\}\right)\cup \FV\left(a'\right)\cup\left(\FV\left(a_{2}\right)\verb|\|\left\{x\right\}\right)\cup \FV\left(a'\right)$\\[6pt]
+				$=\left(\FV\left(a_{1}\right)\cup\FV\left(a_{2}\right)\right)\verb|\|\left\{x\right\}\cup \FV\left(a'\right)$\\[6pt]
+				$\overset{\left(\text{Def}\; 2.4\right)}{=}\left(\FV\left(a_{1}\oplus a_{2}\right)\right)\verb|\|\left\{x\right\}\cup \FV\left(a'\right)$ \begin{flushright}
+				$\qed$
+				\end{flushright}
+			\end{enumerate}
+		\end{enumerate}
+	\end{enumerate}
+	
+	\subsection*{(d)}
+	
+	\begin{enumerate}
+		\item[] (i)
+		\begin{enumerate}
+			\item[] $\text{length}\left(a\left[x:=a'\right]\right)=\text{length}\left(a\right)+\text{occ}\left(a,\;x\right)\cdot\left(\text{length}\left(a'\right)-1\right)$
+		\end{enumerate}
+		\item[] (ii)
+		\begin{enumerate}
+			\item[] The correctness of the proposed formula will be proven by structural induction on the structure of arithmetic expressions a.
+			\item[] \underline{\textbf{Induction Base:}}
+			\begin{enumerate}
+				\item[] \underline{Case 1:}\quad $a=z,\; z\in \mathbb{Z}$
+				\begin{enumerate}
+					\item[] 
+					\begin{tabular}{ll}
+						$\text{length}\left(z\left[x:=a'\right]\right)$ 
+						  & $\overset{\left(a\right)}{=}\text{length}\left(z\right)$\\
+						  & $\hspace*{1.75pt}=\text{length}\left(z\right)+0\cdot\left(\text{length}\left(a'\right)-1\right)$\\
+						  & $\overset{\left(b\right)}{=}\text{length}\left(z\right)+\text{occ}\left(z,\;x\right)\cdot\left(\text{length}\left(a'\right)-1\right)$\\
+					\end{tabular}
+				\end{enumerate}
+				\item[] \underline{Case 2:}\quad $a=y,\; y\neq x\quad y\in \text{Var}$
+				\begin{enumerate}
+					\item[]
+					\begin{tabular}{ll}
+						$\text{length}\left(y\left[x:=a'\right]\right)$ 
+						  & $\overset{\left(a\right)}{=}\text{length}\left(y\right)$\\
+						  & $\hspace*{1.75pt}=\text{length}\left(y\right)+0\cdot\left(\text{length}\left(a'\right)-1\right)$\\
+						  & $\overset{\left(b\right)}{=}\text{length}\left(y\right)+\text{occ}\left(y,\;x\right)\cdot\left(\text{length}\left(a'\right)-1\right)$\\
+					\end{tabular}
+				\end{enumerate}
+				\item[] \underline{Case 3:}\quad $a=x$
+				\begin{enumerate}
+					\item[]
+					\begin{tabular}{ll}
+						$\text{length}\left(x\left[x:=a'\right]\right)$ 
+						  & $\overset{\left(a\right)}{=}\text{length}\left(a'\right)$\\
+						  & $\hspace*{1.75pt}=1+\text{length}\left(a'\right)-1$\\
+						  & $\hspace*{1.75pt}=1+1\cdot\left(\text{length}\left(a'\right)-1\right)$\\
+						  & $\overset{\left(b\right)}{=}\text{length}\left(x\right)+\text{occ}\left(x,\;x\right)\cdot\left(\text{length}\left(a'\right)-1\right)$\\
+					\end{tabular}
+				\end{enumerate}
+			\end{enumerate}
+			\item[] \underline{\textbf{Induction Hypothesis:}}
+			\begin{enumerate}
+				\item[] Assume for all subexpressions $\bar{a}$ of $a$ that\\
+				$\text{length}\left(\bar{a}\left[x:=a'\right]\right)=\text{length}\left(\bar{a}\right)+\text{occ}\left(\bar{a},\;x\right)\cdot\left(\text{length}\left(a'\right)-1\right)$ holds.
+			\end{enumerate}
+			\item[] \underline{\textbf{Induction Step:}}
+			\begin{enumerate}
+				\item[] Let $\oplus\in\left\{+,\;-,\;*\right\}$ and $a_{1},\;a_{2}\in\text{AExp}$.
+				\begin{enumerate}
+					\item[] $\text{length}\left(\left(a_{1}\oplus a_{2}\right)\left[x:=a'\right]\right)\overset{\left(a\right)}{=}\text{length}\left(a_{1}\left[x:=a'\right]\oplus a_{2}\left[x:=a'\right]\right)$\\[6pt]
+					$\overset{\text{def length}}{=}1+\text{length}\left(a_{1}\left[x:=a'\right]\right)+ \text{length}\left(a_{2}\left[x:=a'\right]\right)$\\[6pt]
+					$\overset{\text{\textbf{I.H.}}}{=}1+\left(\text{length}\left(a_{1}\right)+\text{occ}\left(a_{1},\;x\right)\cdot\left(\text{length}\left(a'\right)-1\right)\right)+ \text{length}\left(a_{2}\left[x:=a'\right]\right)$\\[6pt]
+					$\overset{\text{\textbf{I.H.}}}{=}1+\left(\text{length}\left(a_{1}\right)+\text{occ}\left(a_{1},\;x\right)\cdot\left(\text{length}\left(a'\right)-1\right)\right)$\\
+					\hspace*{27pt} $+ \left(\text{length}\left(a_{2}\right)\\+\text{occ}\left(a_{2},\;x\right)\cdot\left(\text{length}\left(a'\right)-1\right)\right)$\\[6pt]
+					$=\left( 1+\text{length}\left(a_{1}\right)+\text{length}\left(a_{2}\right)\right)$\\
+					\hspace*{26pt} $+\left(\text{occ}\left(a_{1},\;x\right)+\text{occ}\left(a_{2},\;x\right)\right)\cdot\left(\text{length}\left(a'\right)-1\right)$\\[6pt]
+					$\overset{\text{Def}}{=}\text{length}\left(a_{1}\oplus a_{2}\right)+\text{occ}\left(a_{1}\oplus a_{2},\;x\right)\cdot\left(\text{length}\left(a'\right)-1\right)$ 
+					\begin{flushright}
+						$\qed$					
+					\end{flushright}
+				\end{enumerate}
+			\end{enumerate}
+		\end{enumerate}
+	\end{enumerate}
+	
 	\section*{Task 2: The Programming Language WHILE}
+	
+	\subsection*{(a)}
+	
+	\begin{enumerate}
+		\item[] $x:=1$; \qquad $//f_{0}$\\
+				$y:=1$; \qquad $//f_{1}$\\
+				$i:=1$;\\
+				$\text{while}\; \left(i<n\right)\; do$
+		\begin{enumerate}
+			\item[] $t:=x+y$; \qquad $//f_{n+2}$\\
+					$x:=y$; \qquad \hspace*{16pt} $//f_{n+1}$\\
+					$y:=t$; \qquad \hspace*{18pt} $//f_{n+2}$\\
+					$i:=i+1$
+		\end{enumerate}
+		\item[] $\text{end}$
+	\end{enumerate}
+	\newpage
+	
+	\subsection*{(b)}
+	
+	\centering
+		\begin{tikzpicture}[->, >=stealth, line width = 0.5mm]
+		\tikzstyle{start} = []
+		\tikzstyle{input} = [draw, font= \sffamily\large\bfseries, align=center]
+		\tikzstyle{asked} = [draw, rounded rectangle, font = \sffamily\large\bfseries, align=center]
+		\tikzstyle{edge} = [draw, line width = 1mm, --]		
+		
+		\path 	( 0,  0) node[start]    (1) {}
+		      ++( 0, -2) node[input]    (2) {$x:=1$}
+		      ++( 0, -2) node[input]    (3) {$y:=1$}
+		      ++( 0, -2) node[input]    (4) {$i:=1$}
+		      ++( 0, -2) node[asked]    (5) {$i < n$}
+		      ++( 0, -2) node[input]    (6) {$t:=x+y$}
+		      ++( 0, -2) node[input]    (7) {$x:=y$}
+		      ++( 0, -2) node[input]    (8) {$y:=t$}
+		      ++( 0, -2) node[input]    (9) {$i:=i+1$}
+		      ++( 3,  8) node[input]   (10) {\textbf{stop}}
+		      
+		       (1) edge[] 			  node[above]  {} (2)
+		       (2) edge[] 			  node[above]  {} (3)
+		       (3) edge[] 			  node[above]  {} (4)
+		       (4) edge[] 			  node[above]  {} (5)
+		       (5) edge[] 			  node[right] {T} (6)
+		           edge[] 			  node[above] {F}(10)
+		       (6) edge[] 			  node[above]  {} (7)
+		       (7) edge[] 			  node[above]  {} (8)
+		       (8) edge[] 			  node[above]  {} (9)
+		       (9) edge[bend left=90] node[above]  {} (5);
+ 			\end{tikzpicture}
+
 
 \end{document}
